{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 307,
  "lineage": "d6226ea2-f93a-fb99-3d39-b73d4077400d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-066b34de35a422f16",
            "association_id": "eipassoc-096663c7726be4ebd",
            "domain": "vpc",
            "id": "eipalloc-066b34de35a422f16",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06a2d465d6e6940e3",
            "private_dns": "ip-100-64-46-22.ec2.internal",
            "private_ip": "100.64.46.22",
            "public_dns": "ec2-44-205-183-152.compute-1.amazonaws.com",
            "public_ip": "44.205.183.152",
            "public_ipv4_pool": "amazon",
            "timeouts": {
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aec0d141d0200f67",
            "association_id": "eipassoc-0fe078d941cb4f5f5",
            "domain": "vpc",
            "id": "eipalloc-0aec0d141d0200f67",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0481ef0bc38cbf58a",
            "private_dns": "ip-100-64-82-86.ec2.internal",
            "private_ip": "100.64.82.86",
            "public_dns": "ec2-3-221-151-23.compute-1.amazonaws.com",
            "public_ip": "3.221.151.23",
            "public_ipv4_pool": "amazon",
            "timeouts": {
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-088be622872375c0b",
            "association_id": "eipassoc-072af56c737cd5426",
            "domain": "vpc",
            "id": "eipalloc-088be622872375c0b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-057d34e2139094c3e",
            "private_dns": "ip-100-64-188-81.ec2.internal",
            "private_ip": "100.64.188.81",
            "public_dns": "ec2-54-236-193-236.compute-1.amazonaws.com",
            "public_ip": "54.236.193.236",
            "public_ipv4_pool": "amazon",
            "timeouts": {
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666634470791:internet-gateway/igw-0ea222a2dfd19340f",
            "id": "igw-0ea222a2dfd19340f",
            "owner_id": "666634470791",
            "vpc_id": "vpc-0f8eb2384fc87f575"
          },
          "dependencies": [
            "aws_ssm_parameter.tf-eks-cluster-name",
            "aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-i1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-066b34de35a422f16",
            "association_id": "eipassoc-096663c7726be4ebd",
            "connectivity_type": "public",
            "id": "nat-00ff7b31365a68848",
            "network_interface_id": "eni-06a2d465d6e6940e3",
            "private_ip": "100.64.46.22",
            "public_ip": "44.205.183.152",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05a175b35e124c7e4"
          },
          "dependencies": [
            "aws_eip.my-eip",
            "aws_ssm_parameter.tf-eks-cluster-name",
            "aws_subnet.subnet-i1",
            "aws_vpc.cluster",
            "aws_vpc_ipv4_cidr_block_association.vpc-cidr-assoc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-i2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aec0d141d0200f67",
            "association_id": "eipassoc-0fe078d941cb4f5f5",
            "connectivity_type": "public",
            "id": "nat-07d571d5bb6fb5c7a",
            "network_interface_id": "eni-0481ef0bc38cbf58a",
            "private_ip": "100.64.82.86",
            "public_ip": "3.221.151.23",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-000d09d01ecd62fe4"
          },
          "dependencies": [
            "aws_eip.my-eip",
            "aws_ssm_parameter.tf-eks-cluster-name",
            "aws_subnet.subnet-i2",
            "aws_vpc.cluster",
            "aws_vpc_ipv4_cidr_block_association.vpc-cidr-assoc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-i3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-088be622872375c0b",
            "association_id": "eipassoc-072af56c737cd5426",
            "connectivity_type": "public",
            "id": "nat-036c17385e9dae290",
            "network_interface_id": "eni-057d34e2139094c3e",
            "private_ip": "100.64.188.81",
            "public_ip": "54.236.193.236",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b09b6ddc73f6c820"
          },
          "dependencies": [
            "aws_eip.my-eip",
            "aws_ssm_parameter.tf-eks-cluster-name",
            "aws_subnet.subnet-i3",
            "aws_vpc.cluster",
            "aws_vpc_ipv4_cidr_block_association.vpc-cidr-assoc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routeTable-i1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666634470791:route-table/rtb-09ee6ddf0b4d3ba51",
            "id": "rtb-09ee6ddf0b4d3ba51",
            "owner_id": "666634470791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00ff7b31365a68848",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-mycluster1-cluster/IsolatedRouteTable"
            },
            "tags_all": {
              "Name": "eks-mycluster1-cluster/IsolatedRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8eb2384fc87f575"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "Name",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "aws_eip.my-eip",
            "aws_nat_gateway.nat-i1",
            "aws_ssm_parameter.tf-eks-cluster-name",
            "aws_subnet.subnet-i1",
            "aws_vpc.cluster",
            "aws_vpc_ipv4_cidr_block_association.vpc-cidr-assoc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routeTable-i2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666634470791:route-table/rtb-0a17fe1189ef42fdf",
            "id": "rtb-0a17fe1189ef42fdf",
            "owner_id": "666634470791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07d571d5bb6fb5c7a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-mycluster1-cluster/IsolatedRouteTable"
            },
            "tags_all": {
              "Name": "eks-mycluster1-cluster/IsolatedRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8eb2384fc87f575"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "Name",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "aws_eip.my-eip",
            "aws_nat_gateway.nat-i2",
            "aws_ssm_parameter.tf-eks-cluster-name",
            "aws_subnet.subnet-i2",
            "aws_vpc.cluster",
            "aws_vpc_ipv4_cidr_block_association.vpc-cidr-assoc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routeTable-i3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666634470791:route-table/rtb-001a72aa50e132260",
            "id": "rtb-001a72aa50e132260",
            "owner_id": "666634470791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-036c17385e9dae290",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-mycluster1-cluster/IsolatedRouteTable"
            },
            "tags_all": {
              "Name": "eks-mycluster1-cluster/IsolatedRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8eb2384fc87f575"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "Name",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "aws_eip.my-eip",
            "aws_nat_gateway.nat-i3",
            "aws_ssm_parameter.tf-eks-cluster-name",
            "aws_subnet.subnet-i3",
            "aws_vpc.cluster",
            "aws_vpc_ipv4_cidr_block_association.vpc-cidr-assoc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-0102c621469c344cd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666634470791:route-table/rtb-00be931a5c2802688",
            "id": "rtb-00be931a5c2802688",
            "owner_id": "666634470791",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f8eb2384fc87f575"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ssm_parameter.tf-eks-cluster-name",
            "aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-0329e787bbafcb2c4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666634470791:route-table/rtb-0e288104bf1f2226a",
            "id": "rtb-0e288104bf1f2226a",
            "owner_id": "666634470791",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f8eb2384fc87f575"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ssm_parameter.tf-eks-cluster-name",
            "aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-041267f0474c24068",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666634470791:route-table/rtb-08521a1ffa1b44392",
            "id": "rtb-08521a1ffa1b44392",
            "owner_id": "666634470791",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f8eb2384fc87f575"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ssm_parameter.tf-eks-cluster-name",
            "aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtbassoc-0102c621469c344cd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085e169b0be3617a7",
            "route_table_id": "rtb-00be931a5c2802688",
            "subnet_id": "subnet-0cab0a652f42f095b"
          },
          "dependencies": [
            "aws_route_table.rtb-0102c621469c344cd",
            "aws_ssm_parameter.tf-eks-cluster-name",
            "aws_subnet.subnet-p1",
            "aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtbassoc-0329e787bbafcb2c4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7fe89ef1efc4ebf",
            "route_table_id": "rtb-0e288104bf1f2226a",
            "subnet_id": "subnet-03ce176430d750d95"
          },
          "dependencies": [
            "aws_route_table.rtb-0329e787bbafcb2c4",
            "aws_ssm_parameter.tf-eks-cluster-name",
            "aws_subnet.subnet-p2",
            "aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtbassoc-041267f0474c24068",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e95f3ffd82bf9aa4",
            "route_table_id": "rtb-08521a1ffa1b44392",
            "subnet_id": "subnet-00e62383bf8f47188"
          },
          "dependencies": [
            "aws_route_table.rtb-041267f0474c24068",
            "aws_ssm_parameter.tf-eks-cluster-name",
            "aws_subnet.subnet-p3",
            "aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allnodes-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666634470791:security-group/sg-07f956dafcae72b5e",
            "description": "Communication between all nodes in the cluster",
            "egress": [],
            "id": "sg-07f956dafcae72b5e",
            "ingress": [],
            "name": "terraform-20231011171623059500000003",
            "name_prefix": "terraform-",
            "owner_id": "666634470791",
            "revoke_rules_on_delete": false,
            "tags": {
              "Label": "TF-EKS All Nodes Comms",
              "Name": "eks-mycluster1-cluster/ClusterSharedNodeSecurityGroup"
            },
            "tags_all": {
              "Label": "TF-EKS All Nodes Comms",
              "Name": "eks-mycluster1-cluster/ClusterSharedNodeSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8eb2384fc87f575"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ssm_parameter.tf-eks-cluster-name",
            "aws_vpc.cluster"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666634470791:security-group/sg-0690415d8415ab0ff",
            "description": "Communication between the control plane and worker nodegroups",
            "egress": [],
            "id": "sg-0690415d8415ab0ff",
            "ingress": [],
            "name": "terraform-20231011171623069100000004",
            "name_prefix": "terraform-",
            "owner_id": "666634470791",
            "revoke_rules_on_delete": false,
            "tags": {
              "Label": "TF-EKS Control Plane \u0026 all worker nodes comms",
              "Name": "eks-mycluster1-cluster/ControlPlaneSecurityGroup"
            },
            "tags_all": {
              "Label": "TF-EKS Control Plane \u0026 all worker nodes comms",
              "Name": "eks-mycluster1-cluster/ControlPlaneSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8eb2384fc87f575"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ssm_parameter.tf-eks-cluster-name",
            "aws_vpc.cluster"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-i1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666634470791:subnet/subnet-05a175b35e124c7e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "100.64.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a175b35e124c7e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "666634470791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "i1-mycluster1",
              "kubernetes.io/cluster/mycluster1": "shared",
              "workshop": "subnet-i1"
            },
            "tags_all": {
              "Name": "i1-mycluster1",
              "kubernetes.io/cluster/mycluster1": "shared",
              "workshop": "subnet-i1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0f8eb2384fc87f575"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "Name",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "aws_ssm_parameter.tf-eks-cluster-name",
            "aws_vpc.cluster",
            "aws_vpc_ipv4_cidr_block_association.vpc-cidr-assoc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-i2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666634470791:subnet/subnet-000d09d01ecd62fe4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "100.64.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000d09d01ecd62fe4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "666634470791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "i2-mycluster1",
              "kubernetes.io/cluster/mycluster1": "shared",
              "workshop": "subnet-i2"
            },
            "tags_all": {
              "Name": "i2-mycluster1",
              "kubernetes.io/cluster/mycluster1": "shared",
              "workshop": "subnet-i2"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0f8eb2384fc87f575"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "Name",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "aws_ssm_parameter.tf-eks-cluster-name",
            "aws_vpc.cluster",
            "aws_vpc_ipv4_cidr_block_association.vpc-cidr-assoc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-i3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666634470791:subnet/subnet-0b09b6ddc73f6c820",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "100.64.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b09b6ddc73f6c820",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "666634470791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "i3-mycluster1",
              "kubernetes.io/cluster/mycluster1": "shared",
              "workshop": "subnet-i3"
            },
            "tags_all": {
              "Name": "i3-mycluster1",
              "kubernetes.io/cluster/mycluster1": "shared",
              "workshop": "subnet-i3"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0f8eb2384fc87f575"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "Name",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "aws_ssm_parameter.tf-eks-cluster-name",
            "aws_vpc.cluster",
            "aws_vpc_ipv4_cidr_block_association.vpc-cidr-assoc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-p1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666634470791:subnet/subnet-0cab0a652f42f095b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cab0a652f42f095b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "666634470791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private1",
              "kubernetes.io/cluster/mycluster1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "workshop": "subnet-p1"
            },
            "tags_all": {
              "Name": "Private1",
              "kubernetes.io/cluster/mycluster1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "workshop": "subnet-p1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0f8eb2384fc87f575"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              }
            ]
          ],
          "dependencies": [
            "aws_ssm_parameter.tf-eks-cluster-name",
            "aws_vpc.cluster"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-p2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666634470791:subnet/subnet-03ce176430d750d95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ce176430d750d95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "666634470791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private2",
              "kubernetes.io/cluster/mycluster1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "workshop": "subnet-p2"
            },
            "tags_all": {
              "Name": "Private2",
              "kubernetes.io/cluster/mycluster1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "workshop": "subnet-p2"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0f8eb2384fc87f575"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              }
            ]
          ],
          "dependencies": [
            "aws_ssm_parameter.tf-eks-cluster-name",
            "aws_vpc.cluster"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-p3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666634470791:subnet/subnet-00e62383bf8f47188",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e62383bf8f47188",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "666634470791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private3",
              "kubernetes.io/cluster/mycluster1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "workshop": "subnet-p3"
            },
            "tags_all": {
              "Name": "Private3",
              "kubernetes.io/cluster/mycluster1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "workshop": "subnet-p3"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0f8eb2384fc87f575"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              }
            ]
          ],
          "dependencies": [
            "aws_ssm_parameter.tf-eks-cluster-name",
            "aws_vpc.cluster"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666634470791:vpc/vpc-0c4b49ffb5af725a9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0eb4b2a5764c38826",
            "default_route_table_id": "rtb-0c365c39d3be7362f",
            "default_security_group_id": "sg-04b3d82be2d68db70",
            "dhcp_options_id": "dopt-014144c89f66926e6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c4b49ffb5af725a9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c365c39d3be7362f",
            "owner_id": "666634470791",
            "tags": {
              "Name": "vpc-10-1"
            },
            "tags_all": {
              "Name": "vpc-10-1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666634470791:vpc/vpc-0f8eb2384fc87f575",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/22",
            "default_network_acl_id": "acl-0e25f8bc2bd5d0208",
            "default_route_table_id": "rtb-09b2334f294194826",
            "default_security_group_id": "sg-00f9773d5e58b54d8",
            "dhcp_options_id": "dopt-014144c89f66926e6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f8eb2384fc87f575",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09b2334f294194826",
            "owner_id": "666634470791",
            "tags": {
              "Name": "eks-mycluster1-cluster"
            },
            "tags_all": {
              "Name": "eks-mycluster1-cluster"
            }
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "Name",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "aws_ssm_parameter.tf-eks-cluster-name"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpce-s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666634470791:vpc-endpoint/vpce-0ed5635fd6a2630c4",
            "cidr_blocks": [
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-0ed5635fd6a2630c4",
            "owner_id": "666634470791",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-00be931a5c2802688",
              "rtb-08521a1ffa1b44392",
              "rtb-0e288104bf1f2226a"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "timeouts": {
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0f8eb2384fc87f575"
          },
          "dependencies": [
            "aws_route_table.rtb-0102c621469c344cd",
            "aws_route_table.rtb-0329e787bbafcb2c4",
            "aws_route_table.rtb-041267f0474c24068",
            "aws_ssm_parameter.tf-eks-cluster-name",
            "aws_vpc.cluster"
          ]
        }
      ]
    }
  ]
}